tests/integration/snapshots/integration__reset__reset_mixed_pathspec_preserves_ai_authorship.snap
---
source: tests/reset.rs
expression: snapshot_checkpoints(&checkpoints)
---
[
    SnapshotCheckpoint {
        author: "ai_agent_2",
        has_agent: true,
        agent_tool: Some(
            "cursor",
        ),
        entries: [
            SnapshotEntry {
                file: "file2.txt",
                added_lines: [
                    Single(
                        3,
                    ),
                ],
                deleted_lines: [],
            },
        ],
    },
]
