tests/integration/snapshots/integration__reset__reset_preserves_uncommitted_changes.snap
---
source: tests/reset.rs
expression: snapshot_checkpoints(&checkpoints)
---
[
    SnapshotCheckpoint {
        author: "ai",
        has_agent: true,
        agent_tool: Some(
            "cursor",
        ),
        entries: [
            SnapshotEntry {
                file: "app.py",
                added_lines: [
                    Single(
                        2,
                    ),
                ],
                deleted_lines: [],
            },
        ],
    },
    SnapshotCheckpoint {
        author: "ai",
        has_agent: true,
        agent_tool: Some(
            "cursor",
        ),
        entries: [
            SnapshotEntry {
                file: "app.py",
                added_lines: [
                    Single(
                        3,
                    ),
                ],
                deleted_lines: [],
            },
        ],
    },
]
