tests/integration/snapshots/integration__reset__reset_soft_reconstructs_working_log.snap
---
source: tests/reset.rs
expression: snapshot_checkpoints(&checkpoints)
---
[
    SnapshotCheckpoint {
        author: "ai",
        has_agent: true,
        agent_tool: Some(
            "cursor",
        ),
        entries: [
            SnapshotEntry {
                file: "test.txt",
                added_lines: [
                    Single(
                        3,
                    ),
                ],
                deleted_lines: [],
            },
        ],
    },
]
