tests/integration/snapshots/integration__reset__reset_with_new_files.snap
---
source: tests/reset.rs
expression: snapshot_checkpoints(&checkpoints)
---
[
    SnapshotCheckpoint {
        author: "ai",
        has_agent: true,
        agent_tool: Some(
            "cursor",
        ),
        entries: [
            SnapshotEntry {
                file: "new.txt",
                added_lines: [
                    Single(
                        1,
                    ),
                ],
                deleted_lines: [],
            },
        ],
    },
]
